Fix issue with select box not showing selected items.

--- a/app/styles/forms.scss
+++ b/app/styles/forms.scss
@@ -32,7 +32,7 @@ textarea {
   }
 }
 select {
-  padding: 20px;
+  padding: 6px;
   font-size: 13px;
   color: $light_grey;
   border: $light_grey 1px solid;
